--- a/Twitch.html
+++ b/Twitch.html
@@ -517,7 +517,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">29.11.21 - 05.12.21</p>
+                <p class="lead">13.12.21 - 19.12.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -557,7 +557,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Five Nights at Freddy's Security Breach</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
@@ -575,7 +575,7 @@
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
-                        <td>Rocket League</td>
+                        <td>-</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>Splatoon 2</td>
@@ -585,7 +585,7 @@
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Splatoon 2</td>
+                        <td>Rocket League</td>
                         <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
@@ -595,7 +595,7 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>Transport Fever 2</td>
-                        <td>League of Legends</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -628,7 +628,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">06.12.21 - 12.12.21</p>
+                <p class="lead">20.12.21 - 26.12.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -649,7 +649,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Heiligabendstream (Animal Crossing New Horizons)</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -659,7 +659,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Heiligabendstream (Variabel)</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -669,7 +669,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -679,7 +679,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Mario Kart 8 Deluxe</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -689,7 +689,7 @@
                         <td>Rocket League</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
-                        <td>Splatoon 2</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
