--- a/Twitch.html
+++ b/Twitch.html
@@ -557,8 +557,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Five Nights at Freddy's Security Breach</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>Animal Crossing New Horizons (Ersatz)</td>
+                        <td>Five Nights at Freddy's Security Breach <span class="fw-bold">Verspäteter Release</span></td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -567,8 +567,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Five Nights at Freddy's Security Breach</td>
-                        <td>Mario Kart 8 Deluxe</td>
+                        <td>Variabel (Ersatz)</td>
+                        <td>Five Nights at Freddy's Security Breach <span class="fw-bold">Verspäteter Release</span></td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -577,8 +577,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>Animal Crossing New Horizons</td>
+                        <td>Variabel (Ersatz)</td>
                         <td>-</td>
-                        <td>Splatoon 2</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
