--- a/Twitch.html
+++ b/Twitch.html
@@ -517,7 +517,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">13.12.21 - 19.12.21</p>
+                <p class="lead">27.12.21 - 02.01.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -537,7 +537,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>The Legend of Zelda: Breath of the Wild</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -547,7 +547,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -557,8 +557,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons (Ersatz)</td>
-                        <td>Five Nights at Freddy's Security Breach <span class="fw-bold">Verspäteter Release</span></td>
+                        <td>Tetris 99</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -567,17 +567,17 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Variabel (Ersatz)</td>
-                        <td>Five Nights at Freddy's Security Breach <span class="fw-bold">Verspäteter Release</span></td>
+                        <td>Rocket League</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
-                        <td>-</td>
                         <td>Animal Crossing New Horizons</td>
-                        <td>Variabel (Ersatz)</td>
+                        <td>-</td>
+                        <td>Beat Saber (VR)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -586,8 +586,8 @@
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
                         <td>Rocket League</td>
-                        <td>Variabel</td>
                         <td>-</td>
+                        <td>Five Nights at Freddy's VR: Help Wanted</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -595,9 +595,9 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>Transport Fever 2</td>
-                        <td>Variabel</td>
+                        <td>Pflanzen gegen Zombies: Battle for Neighborville</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -605,9 +605,9 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
-                        <td>Transport Fever 2</td>
+                        <td>Five Nights at Freddy's Security Breach</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Minecraft (mit Abschlussspecial)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -628,7 +628,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">20.12.21 - 26.12.21</p>
+                <p class="lead">03.01.22 - 09.01.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -649,7 +649,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Heiligabendstream (Animal Crossing New Horizons)</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -659,7 +659,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Heiligabendstream (Variabel)</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -669,7 +669,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -679,7 +679,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -689,14 +689,14 @@
                         <td>Rocket League</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Splatoon 2</td>
+                        <td>Variabel</td>
                         <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
@@ -706,7 +706,7 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>Transport Fever 2</td>
-                        <td>Transport Fever 2</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -716,7 +716,7 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
-                        <td>Minecraft</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
