Streamplan 27.12 - 09.01 mit Bildupdate

--- a/Twitch.html
+++ b/Twitch.html
@@ -508,6 +508,56 @@
 </section>
 
 <!--Section 4-->
+<section class="p-5 bg-dark-grey-twitch bg-opacity-25">
+    <div class="container">
+        <div class="d-flex justify-content-around flex-column flex-lg-row">
+            <div id="carouselScreenshots" class="carousel slide carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mt-lg-0" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/ACNH_alle_Tannenbäume.jpg" class="d-block w-100" alt="Wendy mit Abigail im Wald">
+                    </div>
+                    <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/ACNH_Fischauge.jpg" class="d-block w-100" alt="Joshi mit Drip">
+                    </div>
+                    <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/ACNH_Gruppenbild_Ronja_Gold.jpg" class="d-block w-100" alt="Traurige Wendy im Wald">
+                    </div>
+                    <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/ACNH_Siegerehrung_Jubiläum.jpg" class="d-block w-100" alt="Sexy Bild meines Namens">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselScreenshots" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselScreenshots" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div id="carouselScreenshots2" class="carousel slide carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mb-lg-0" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/Splatoon_Drippic_1.jpg" class="d-block w-100" alt="Wendy mit Abigail im Wald">
+                    </div>
+                    <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/Splatoon_Drippic_2.jpg" class="d-block w-100" alt="Joshi mit Drip">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselScreenshots2" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselScreenshots2" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--Section 5-->
 <section class="bg-dark-grey-twitch bg-opacity-75 text-center text-white text-opacity-75 p-5">
     <div class="container">
         <div id="Streamplan">
@@ -740,7 +790,7 @@
     </div>
 </section>
 
-<!--Section 5-->
+<!--Section 6-->
 <section class="p-5">
     <div class="container">
         <div class="d-xl-flex justify-content-around text-center text-xl-start text-black-50">
@@ -833,7 +883,7 @@
     </div>
 </section>
 
-<!--Section 6-->
+<!--Section 7-->
 <section class="p-5">
     <div class="container">
         <div class="d-flex justify-content-around text-center text-xl-start text-black-50 flex-wrap-reverse flex-xl-nowrap">
