Streamplan 27.12 - 09.01 mit Bildupdate

--- a/Twitch.html
+++ b/Twitch.html
@@ -511,7 +511,7 @@
 <section class="p-5 bg-dark-grey-twitch bg-opacity-25">
     <div class="container">
         <div class="d-flex justify-content-around flex-column flex-lg-row">
-            <div id="carouselScreenshots" class="carousel slide carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mt-lg-0" data-bs-ride="carousel">
+            <div id="carouselScreenshots" class="carousel slide carousel-fade carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mt-lg-0" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active shadow p-3 mb-5 bg-body rounded">
                         <img src="data/pictures/ACNH_alle_Tannenbäume.jpg" class="d-block w-100" alt="Wendy mit Abigail im Wald">
@@ -535,7 +535,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <div id="carouselScreenshots2" class="carousel slide carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mb-lg-0" data-bs-ride="carousel">
+            <div id="carouselScreenshots2" class="carousel slide carousel-fade carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mb-lg-0" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active shadow p-3 mb-5 bg-body rounded">
                         <img src="data/pictures/Splatoon_Drippic_1.jpg" class="d-block w-100" alt="Wendy mit Abigail im Wald">
