Streamplan 03.01 - 16.01 mit Bildupdate

--- a/Twitch.html
+++ b/Twitch.html
@@ -514,16 +514,19 @@
             <div id="carouselScreenshots" class="carousel slide carousel-fade carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mt-lg-0" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active shadow p-3 mb-5 bg-body rounded">
-                        <img src="data/pictures/ACNH_alle_Tannenbäume.jpg" class="d-block w-100" alt="Wendy mit Abigail im Wald">
+                        <img src="data/pictures/ACNH_alle_Tannenbäume.jpg" class="d-block w-100" alt="ACNH Screenshot">
                     </div>
                     <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
-                        <img src="data/pictures/ACNH_Fischauge.jpg" class="d-block w-100" alt="Joshi mit Drip">
+                        <img src="data/pictures/ACNH_Fischauge.jpg" class="d-block w-100" alt="ACNH Screenshot">
                     </div>
                     <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
-                        <img src="data/pictures/ACNH_Gruppenbild_Ronja_Gold.jpg" class="d-block w-100" alt="Traurige Wendy im Wald">
+                        <img src="data/pictures/ACNH_Gruppenbild_Ronja_Gold.jpg" class="d-block w-100" alt="ACNH Screenshot">
                     </div>
                     <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
-                        <img src="data/pictures/ACNH_Siegerehrung_Jubiläum.jpg" class="d-block w-100" alt="Sexy Bild meines Namens">
+                        <img src="data/pictures/ACNH_Siegerehrung_Jubiläum.jpg" class="d-block w-100" alt="ACNH Screenshot">
+                    </div>
+                    <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/Feuerwerk_MC_ohne_Hud.png" class="d-block w-100" alt="Minecraft Screenshot">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselScreenshots" data-bs-slide="prev">
@@ -538,12 +541,18 @@
             <div id="carouselScreenshots2" class="carousel slide carousel-fade carousel-dark pt-3 pt-lg-0 ps-lg-2 m-lg-5 mb-lg-0" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active shadow p-3 mb-5 bg-body rounded">
-                        <img src="data/pictures/Splatoon_Drippic_1.jpg" class="d-block w-100" alt="Wendy mit Abigail im Wald">
+                        <img src="data/pictures/Splatoon_Drippic_1.jpg" class="d-block w-100" alt="Splatoon Screenshot">
                     </div>
                     <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
-                        <img src="data/pictures/Splatoon_Drippic_2.jpg" class="d-block w-100" alt="Joshi mit Drip">
+                        <img src="data/pictures/Splatoon_Drippic_2.jpg" class="d-block w-100" alt="Splatoon Screenshot">
                     </div>
+                    <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                        <img src="data/pictures/Rocket_League_Abschlussstream_Lobby.png" class="d-block w-100" alt="Rocket League Screenshot">
+                    </div>
+                <div class="carousel-item shadow p-3 mb-5 bg-body rounded">
+                    <img src="data/pictures/Feuerwerk_MC_mit_Hud.png" class="d-block w-100" alt="Minecraft Screenshot">
                 </div>
+            </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselScreenshots2" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
@@ -567,7 +576,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">27.12.21 - 02.01.22</p>
+                <p class="lead">03.01.22 - 09.01.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -587,7 +596,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>The Legend of Zelda: Breath of the Wild</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -597,7 +606,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -606,9 +615,9 @@
                         <th scope="row">15:00 - 16:30</th>
                         <td>-</td>
                         <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
-                        <td>Tetris 99</td>
-                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -616,28 +625,28 @@
                         <th scope="row">16:30 - 18:00</th>
                         <td>-</td>
                         <td>-</td>
+                        <td>Beat Saber (VR)</td>
                         <td>-</td>
-                        <td>Rocket League</td>
-                        <td>-</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>Rocket League</td>
                         <td>-</td>
-                        <td>Beat Saber (VR)</td>
                         <td>-</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Rocket League</td>
+                        <td>Variabel</td>
                         <td>-</td>
-                        <td>Five Nights at Freddy's VR: Help Wanted</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -645,9 +654,9 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>Transport Fever 2</td>
-                        <td>Pflanzen gegen Zombies: Battle for Neighborville</td>
+                        <td>Five Nights at Freddy's Security Breach</td>
                         <td>-</td>
-                        <td>Minecraft</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -655,9 +664,9 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
-                        <td>Five Nights at Freddy's Security Breach</td>
+                        <td>Minecraft</td>
                         <td>-</td>
-                        <td>Minecraft (mit Abschlussspecial)</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -678,7 +687,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">03.01.22 - 09.01.22</p>
+                <p class="lead">10.01.22 - 16.01.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
