--- a/Twitch.html
+++ b/Twitch.html
@@ -576,7 +576,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">03.01.22 - 09.01.22</p>
+                <p class="lead">17.01.22 - 23.01.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -615,7 +615,7 @@
                         <th scope="row">15:00 - 16:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
@@ -625,7 +625,7 @@
                         <th scope="row">16:30 - 18:00</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>Beat Saber (VR)</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>Variabel</td>
                         <td>-</td>
@@ -634,29 +634,29 @@
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
+                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>Rocket League</td>
                         <td>-</td>
-                        <td>-</td>
-                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
-                        <td>Transport Fever 2</td>
-                        <td>Variabel</td>
+                        <td>Cities Skylines</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Beat Saber (VR)</td>
+                        <td>FNAF Security Breach</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
-                        <td>Transport Fever 2</td>
-                        <td>Five Nights at Freddy's Security Breach</td>
+                        <td>Cities Skylines</td>
                         <td>-</td>
                         <td>-</td>
+                        <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -664,9 +664,9 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>Minecraft</td>
-                        <td>-</td>
-                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -687,7 +687,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">10.01.22 - 16.01.22</p>
+                <p class="lead">24.01.22 - 30.01.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -764,7 +764,7 @@
                     </tr>
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
-                        <td>Transport Fever 2</td>
+                        <td>Cities Skylines</td>
                         <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
