--- a/Twitch.html
+++ b/Twitch.html
@@ -576,7 +576,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">17.01.22 - 23.01.22</p>
+                <p class="lead">07.02.22 - 13.02.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -627,7 +627,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Variabel</td>
+                        <td>Splatoon 2</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -637,23 +637,23 @@
                         <td>-</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>Rocket League</td>
+                        <td>Variabel</td>
                         <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>Collab mit Uzu</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
-                        <td>Cities Skylines</td>
+                        <td>Cities Skylines/Transport Fever 2</td>
                         <td>-</td>
                         <td>Beat Saber (VR)</td>
-                        <td>FNAF Security Breach</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Collab mit Uzu</td>
                     </tr>
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
-                        <td>Cities Skylines</td>
+                        <td>Cities Skylines/Transport Fever 2</td>
                         <td>-</td>
                         <td>-</td>
                         <td>Minecraft</td>
@@ -687,7 +687,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">24.01.22 - 30.01.22</p>
+                <p class="lead">14.02.22 - 20.02.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -745,9 +745,9 @@
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
-                        <td>Rocket League</td>
-                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td>Rocket League</td>
                         <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
@@ -755,9 +755,9 @@
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Variabel</td>
-                        <td>Variabel</td>
                         <td>-</td>
+                        <td>Variabel</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -765,9 +765,9 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>Cities Skylines</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>Variabel</td>
-                        <td>-</td>
-                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
